fix: add z-index

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -11,6 +11,8 @@
 .burger__navigation {
   background: rgba(0,0,0,.3);
   display: flex;
+  /* display: none; */
+  z-index: -1;
   height: 100%;
   justify-content: flex-end;
   left: 0;
@@ -124,6 +126,7 @@
     display: flex;
     transform: translateX(0);
     opacity: 1;
+    z-index: 1;
   }
   .burger__navigation-container {
     background: #202020;
